--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
-    <title>The Dude Store</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <title>The Dude Store</title>
+    
 </head>
 
 <body style="background-color:darkslateblue;">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="/images/THE DUDE STORE.png" alt="" width="150px"></a>
+                <a class="navbar-brand" href="#"><img src="images/THE DUDE STORE.png" alt="" width="150px"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -68,15 +69,15 @@
     <main class="main-content">
 
         <div class="waves">
-            <img src="/images/waves.png" alt="">
+            <img src="images/waves.png" alt="">
         </div>
         <center>
             <div class="display-main">
                 <div class="main-image">
-                    <img src="/images/main image.png" alt="" width="360px">
+                    <img src="images/main image.png" alt="" width="360px">
                 </div>
                 <div class="the-dude">
-                    <img src="/images/THE DUDE STORE reprise 2.png" alt="">
+                    <img src="images/THE DUDE STORE reprise 2.png" alt="">
                 </div>
             </div>
 
@@ -86,7 +87,7 @@
         <div class="bigcard">
             <div class="major-card">
                 <div class="card">
-                    <img src="/images/img1.jpg" alt="" width="300px">
+                    <img src="images/img1.jpg" alt="" width="300px">
                     <p>PRINTED HOODIES</p>
                     <p>12% off</p>
                     <p>grab now!</p>
@@ -95,7 +96,7 @@
 
             <div class="major-card">
                 <div class="card">
-                    <img src="/images/img2.jpg" alt="" width="300px">
+                    <img src="images/img2.jpg" alt="" width="300px">
                     <p>SOLID HOODIES</p>
                     <p>22% off</p>
                     <p>grab now!</p>
@@ -104,7 +105,7 @@
 
             <div class="major-card">
                 <div class="card">
-                    <img src="/images/img3.jpg" alt="" width="300px">
+                    <img src="images/img3.jpg" alt="" width="300px">
                     <p>MEME HOODIES</p>
                     <p>42% off</p>
                     <p>grab now!</p>
