--- a/index.html
+++ b/index.html
@@ -14,16 +14,8 @@
     <link rel="stylesheet" href="/css/style.css" />
     <!-- bootstrap -->
     <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
@@ -47,7 +39,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
-            ><img src="/images/THE DUDE STORE.png" alt="" width="150px"
+            ><img src="images/THE DUDE STORE.png" alt="" width="150px"
           /></a>
           <button
             class="navbar-toggler"
@@ -109,15 +101,15 @@
 
     <main class="main-content">
       <div class="waves">
-        <img src="/images/waves.png" alt="" />
+        <img src="images/waves.png" alt="" />
       </div>
       <center>
         <div class="display-main">
           <div class="main-image">
-            <img src="/images/main image.png" alt="" width="360px" />
+            <img src="images/main image.png" alt="" width="360px" />
           </div>
           <div class="the-dude">
-            <img src="/images/THE DUDE STORE reprise 2.png" alt="" />
+            <img src="images/THE DUDE STORE reprise 2.png" alt="" />
           </div>
         </div>
       </center>
@@ -125,7 +117,7 @@
       <div class="bigcard">
         <div class="major-card">
           <div class="card">
-            <img src="/images/img1.jpg" alt="" width="300px" />
+            <img src="images/img1.jpg" alt="" width="300px" />
             <p>PRINTED HOODIES</p>
             <p>12% off</p>
             <p>grab now!</p>
@@ -134,7 +126,7 @@
 
         <div class="major-card">
           <div class="card">
-            <img src="/images/img2.jpg" alt="" width="300px" />
+            <img src="images/img2.jpg" alt="" width="300px" />
             <p>SOLID HOODIES</p>
             <p>22% off</p>
             <p>grab now!</p>
@@ -143,7 +135,7 @@
 
         <div class="major-card">
           <div class="card">
-            <img src="/images/img3.jpg" alt="" width="300px" />
+            <img src="images/img3.jpg" alt="" width="300px" />
             <p>MEME HOODIES</p>
             <p>42% off</p>
             <p>grab now!</p>
