--- a/index.html
+++ b/index.html
@@ -6,32 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS Stylesheets -->
     <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+
     <!-- bootstrap -->
     <script
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
-    <title>The Dude Store</title>
+    <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
       rel="stylesheet"
     />
-
+    <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
+    <title>The Dude Store</title>
   </head>
 
   <body style="background-color: rgb(42, 39, 39)">
@@ -72,7 +88,7 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">Printed hoodies</a></li>
                   <li><a class="dropdown-item" href="#">Solid hoodies</a></li>
-                  <li><a class="dropdown-item" href="#">Meme hoodies</a></li>
+                  <li><a class="dropdown-item" href="#">Mem hoodies</a></li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
@@ -96,23 +112,21 @@
       </nav>
     </header>
 
-    <div class="white-line">
-    </div>
+    <div class="white-line"></div>
 
     <main class="main-content">
       <div class="waves">
         <img src="images/waves.png" alt="" />
       </div>
-      <center>
-        <div class="display-main">
-          <div class="main-image">
-            <img src="images/main image.png" alt="" width="360px" />
-          </div>
-          <div class="the-dude">
-            <img src="images/THE DUDE STORE reprise 2.png" alt="" />
-          </div>
+
+      <div class="display-main">
+        <div class="main-image">
+          <img src="images/main image.png" alt="" width="360px" />
         </div>
-      </center>
+        <div class="the-dude">
+          <img src="images/THE DUDE STORE reprise 2.png" alt="" />
+        </div>
+      </div>
 
       <div class="bigcard">
         <div class="major-card">
@@ -143,8 +157,7 @@
         </div>
       </div>
     </main>
-    <div class="white-line">
-    </div>
+    <div class="white-line"></div>
     <footer class="footer1">
       <p>TheDudeStore &copy; 2022</p>
     </footer>
